Add the first ground member with some information about him and his picture

--- a/bio.html
+++ b/bio.html
@@ -16,8 +16,19 @@
     </ul>
   </nav>
 <!-- End of Nav bar -->
+<div class="ken">
+  <img src="/images/kenchez.png" alt="kenneth whoever">
+  <div class="bio">
+    <h3>Kenneth alias kenches</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+    Ea ex reprehenderit nulla nesciunt illum modi, impedit, alias 
+    quae repellendus harum rerum soluta voluptatibus ad animi eligendi
+     tempora id corrupti ut.</p>
+  </div>
+</div>
+<!-- Biography section -->
 
-
+<!-- End of Biography section -->
   </div>
   
 </body>
