Add the third member and id value for each member

--- a/bio.html
+++ b/bio.html
@@ -16,17 +16,48 @@
     </ul>
   </nav>
 <!-- End of Nav bar -->
-<div class="ken">
-  <img src="/images/kenchez.png" alt="kenneth whoever">
-  <div class="bio">
-    <h3>Kenneth alias kenches</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-    Ea ex reprehenderit nulla nesciunt illum modi, impedit, alias 
-    quae repellendus harum rerum soluta voluptatibus ad animi eligendi
-     tempora id corrupti ut.</p>
-  </div>
-</div>
 <!-- Biography section -->
+
+  <div class="band" id="kench">
+    <img src="/images/kenchez.png" alt="kenchez">
+    <div class="bio">
+      <h3>Kenneth Muya alias <em>Kenchez</em></h3>
+      <p>Kenneth Muya known by his stage name <strong>Kenchez</strong>,
+         was born and raised in kayole. He discovered his love for art
+         at a tender age. Back in 2012 while acting at Kenya National 
+         Theater, he met <a href="#mod">Modercai Mwini</a> and 
+         <a href="#skoko">Wachira Gatama</a> and they teamed up to 
+         form H_art the band</p>
+    </div>
+  </div>
+
+
+
+  <div class="band" id="mod">
+    <div class="bio">
+      <h3>Mordecai Mwini alias <em>mordecai</em></h3>
+      <p>Mordecai one of the h_art the band member,
+         was born and raised in kayole. He is a singer, songwriter,cedo_producer
+          teacher and an entepreneur. Back in 2012 while acting at Kenya National 
+         Theater, he met <a href="#kench">Kenneth Muya</a> and 
+         <a href="#skoko">Wachira Gatama</a> and they teamed up to 
+         form H_art the band</p>
+    </div>
+    <img src="/images/mode.png" alt="mordecai">
+  </div>
+
+  <div class="band" id="skoko">
+    <img src="/images/skoko.png" alt="skoko">
+    <div class="bio">
+      <h3>Wachira Gatama alias <em>Skoko</em></h3>
+      <p>Wachira Gatama known by his stage name <strong>skoko</strong>,
+         is the third member of the band. Back in 2012 while acting at Kenya National 
+         Theater, he met <a href="#mod">Modercai Mwini</a> and 
+         <a href="#kench">Kenneth Muya</a> and they teamed up to 
+         form H_art the band</p>
+    </div>
+  </div>
+
 
 <!-- End of Biography section -->
   </div>
