Add footer in the bio page

--- a/bio.html
+++ b/bio.html
@@ -60,6 +60,12 @@
 
 
 <!-- End of Biography section -->
+
+ <!-- footer -->
+ <div class="footer">
+  <p>favourite band site. crafted by <em>Kinoti Gitonga</em></p>
+</div>
+<!-- end of footer -->
   </div>
   
 </body>
