--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
 
     <ul class="main-menu">
       <li><a href="index.html">Home</a></li>
-      <li><a href="bio.html">Biography</a></li>
+      <li class="current"><a href="bio.html">Biography</a></li>
     </ul>
   </nav>
 <!-- End of Nav bar -->
