--- a/bio.html
+++ b/bio.html
@@ -8,7 +8,7 @@
   <div class="container">
     <!-- Nav bar -->
   <nav class="main-nav">
-    <img src="/images/H_artLogo.png" alt="h_art the band logo" class="logo">
+    <img src="images/H_artLogo.png" alt="h_art the band logo" class="logo">
 
     <ul class="main-menu">
       <li><a href="index.html">Home</a></li>
@@ -19,7 +19,7 @@
 <!-- Biography section -->
 
   <div class="band" id="kench">
-    <img src="/images/kenchez.png" alt="kenchez">
+    <img src="images/kenchez.png" alt="kenchez">
     <div class="bio">
       <h3>Kenneth Muya alias <em>Kenchez</em></h3>
       <p>Kenneth Muya known by his stage name <strong>Kenchez</strong>,
@@ -43,11 +43,11 @@
          <a href="#skoko">Wachira Gatama</a> and they teamed up to 
          form H_art the band</p>
     </div>
-    <img src="/images/mode.png" alt="mordecai">
+    <img src="images/mode.png" alt="mordecai">
   </div>
 
   <div class="band" id="skoko">
-    <img src="/images/skoko.png" alt="skoko">
+    <img src="images/skoko.png" alt="skoko">
     <div class="bio">
       <h3>Wachira Gatama alias <em>Skoko</em></h3>
       <p>Wachira Gatama known by his stage name <strong>skoko</strong>,
